--- a/das-11ty-site/admin/config.yml
+++ b/das-11ty-site/admin/config.yml
@@ -1,15 +1,17 @@
 backend:
-  name: git-gateway
-  branch: main
+  name: github
+  repo: dalwin-404/DAS-Properties
+  branch: master
 
-media_folder: "assets/uploads"
+media_folder: "src/assets/uploads"
 public_folder: "/assets/uploads"
 
 collections:
-  - name: "posts"
-    label: "Posts"
-    folder: "posts"
+  - name: "pages"
+    label: "Pages"
+    folder: "src/pages"
     create: true
+    slug: "{{slug}}"
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
