--- a/das-11ty-site/netlify.toml
+++ b/das-11ty-site/netlify.toml
@@ -1,8 +1,8 @@
 [build]
-  command = "npm run build"
   publish = "_site"
+  command = "npx @11ty/eleventy"
 
 [[redirects]]
-  from = "/admin"
+  from = "/admin/*"
   to = "/admin/index.html"
   status = 200
