--- a/das-11ty-site/package.json
+++ b/das-11ty-site/package.json
@@ -11,5 +11,9 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2"
+  },
+  "dependencies": {
+    "@sanity/client": "^7.6.0",
+    "dotenv": "^17.0.0"
   }
 }
