--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@11ty/eleventy": "^3.0.0",
+    "@sanity/client": "^7.6.0",
     "fast-glob": "^3.3.3",
     "sharp": "^0.34.2"
   },
