--- a/admin/config.yml
+++ b/admin/config.yml
@@ -76,108 +76,64 @@ collections:
     create: true
     slug: '{{title}}'
     fields:
-  - { label: 'Title', name: 'title', widget: 'string' }
-  - label: 'Slug'
-    name: 'slug'
-    widget: 'string'
-    hint: 'Unique URL ID (e.g. luxury-apartment-london)'
-
-  - label: 'Price From'
-    name: 'priceFrom'
-    widget: 'string'
-    required: false
-
-  - label: 'Price Icon'
-    name: 'priceIcon'
-    widget: 'select'
-    required: false
-    options:
-      - { label: 'Tags', value: 'fa-solid fa-tags' }
-      - { label: 'Money Bill', value: 'fa-solid fa-money-bill' }
-
-  - label: 'Yield'
-    name: 'yield'
-    widget: 'string'
-    required: false
-
-  - label: 'Yield Icon'
-    name: 'yieldIcon'
-    widget: 'select'
-    required: false
-    options:
-      - { label: 'Chart Line', value: 'fa-solid fa-chart-line' }
-
-  - label: 'Completion Date'
-    name: 'completionDate'
-    widget: 'string'
-    required: false
-
-  - label: 'Completion Icon'
-    name: 'completionIcon'
-    widget: 'select'
-    required: false
-    options:
-      - { label: 'Hourglass', value: 'fa-solid fa-hourglass-half' }
-
-  - label: 'Deposit'
-    name: 'deposit'
-    widget: 'string'
-    required: false
-
-  - label: 'Deposit Icon'
-    name: 'depositIcon'
-    widget: 'select'
-    required: false
-    options:
-      - { label: 'Money Bill Wave', value: 'fa-solid fa-money-bill-wave' }
-
-  - label: 'Description'
-    name: 'description'
-    widget: 'markdown'
-
-  - label: 'Location'
-    name: 'location'
-    widget: 'string'
-
-  - label: 'Category'
-    name: 'category'
-    widget: 'string'
-    required: false
-
-  - label: 'Tenure'
-    name: 'tenure'
-    widget: 'string'
-    required: false
-
-  - label: 'Total Units'
-    name: 'totalUnits'
-    widget: 'string'
-    required: false
-
-  - label: 'Featured Property'
-    name: 'featured'
-    widget: 'boolean'
-    default: false
-    hint: 'Check to show on homepage'
-
-  - label: 'Main Image'
-    name: 'mainImage'
-    widget: 'image'
-
-  - label: 'Gallery'
-    name: 'gallery'
-    widget: 'list'
-    field:
-      label: 'Image'
-      name: 'image'
-      widget: 'image'
-    required: false
-
-  - label: 'Map Location (Embed Code)'
-    name: 'mapLocation'
-    widget: 'text'
-    required: false
-    hint: 'Embed code for Google Maps'
+      - { label: 'Title', name: 'title', widget: 'string' }
+      - {
+          label: 'Slug',
+          name: 'slug',
+          widget: 'string',
+          hint: 'Unique URL ID (e.g. luxury-apartment-london)',
+        }
+      - { label: 'Description', name: 'description', widget: 'markdown' }
+      - { label: 'Location', name: 'location', widget: 'string' }
+      - {
+          label: 'Category',
+          name: 'category',
+          widget: 'string',
+          required: false,
+        }
+      - {
+          label: 'Price From',
+          name: 'priceFrom',
+          widget: 'string',
+          required: false,
+        }
+      - { label: 'Yield', name: 'yield', widget: 'string', required: false }
+      - { label: 'Deposit', name: 'deposit', widget: 'string', required: false }
+      - {
+          label: 'Completion Date',
+          name: 'completionDate',
+          widget: 'string',
+          required: false,
+        }
+      - { label: 'Tenure', name: 'tenure', widget: 'string', required: false }
+      - {
+          label: 'Total Units',
+          name: 'totalUnits',
+          widget: 'string',
+          required: false,
+        }
+      - {
+          label: 'Featured Property',
+          name: 'featured',
+          widget: 'boolean',
+          default: false,
+          hint: 'Check to show on homepage',
+        }
+      - { label: 'Main Image', name: 'mainImage', widget: 'image' }
+      - {
+          label: 'Gallery',
+          name: 'gallery',
+          widget: 'list',
+          field: { label: 'Image', name: 'image', widget: 'image' },
+          required: false,
+        }
+      - {
+          label: 'Map Location (Embed Code)',
+          name: 'mapLocation',
+          widget: 'text',
+          required: false,
+          hint: 'Embed code for Google Maps',
+        }
 
   # ✅ Pages
   - name: 'pages'
